# moos-dawg-static-analysis-examples

./: CMakeLists.txt  README.md  build.sh  network_build.sh  scan_build.sh  state_machine_build.sh
launch/: state_machine.launch
src/: CMakeLists.txt
src/clang_analyzer/: CMakeLists.txt  mistakes.cpp
src/gps_driver/: CMakeLists.txt  config.proto
src/messages/: gps.proto  groups.h  nav.proto  nav_dccl.proto  state.proto
src/state_machine/: CMakeLists.txt
src/state_machine/goby/: CMakeLists.txt  config.proto  machine.h  subscriber.cpp
src/state_machine/hierarchical/: CMakeLists.txt  hierarchical_machine.cpp  hierarchical_machine.dot  hierarchical_machine.h
src/state_machine/minimal/: CMakeLists.txt  minimal_machine.cpp  minimal_machine.dot
src/units/: a.out  units-demo.cpp
